plugins/groovy/testdata/highlighting/ClosureRedefiningVariable.groovy
def v = 1
{ def <error descr="Variable 'v' already defined">v</error> = 2 }